# echo

./: 404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html  sitemap.xml
.github/workflows/: pages.yml
API/: index.html
Element/: index.html
Event/: index.html
Term/: index.html
docs/: API.md  Element.md  Event.md  Makefile  Term.md  index.md  requirements.txt  term.md
docs/source/: API.rst  Element.rst  Event.rst  Term.rst  conf.py  index.rst
scripts/: hooks.py
search/: search_index.json
