[project]
name = "echo"
version = "1.0"
description = "Event Communication and Harmonization across Online platforms"
authors = [
    {name = "简律纯",email = "i@jyunko.cn"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-alabaster",
]
mkdocs-alabaster = []
