[project]
name = "echo"
version = "1.0"
description = "Event Communication and Harmonization across Online platforms"
authors = [
    {name = "简律纯",email = "i@jyunko.cn"},
]
dependencies = [
    "furo>=2024.8.6",
    "myst-parser>=4.0.1",
    "requests>=2.31.0",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-design>=0.6.1",
    "sphinx-intl>=2.3.1",
    "tomli>=2.2.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}